align fix

--- a/src/styles.css
+++ b/src/styles.css
@@ -394,6 +394,22 @@ button:hover {
   outline: none;
 }
 
+.ql-align-left {
+  text-align: left;
+}
+
+.ql-align-center {
+  text-align: center;
+}
+
+.ql-align-right {
+  text-align: right;
+}
+
+.ql-align-justify {
+  text-align: justify;
+}
+
 .delete-category-button {
   background-color: var(--color-error);
   color: white;
